 o ntlm: Fixed HTTP proxy authentication when using Windows SSPI [3]
 o sasl_sspi: Fixed Unicode build [4]
 o file: reject paths using embedded %00
 o threaded-resolver: revert Curl_expire_latest() switch [6]
 o build: Added WinIDN build configuration options
 o configure: allow --with-ca-path with PolarSSL too
 o HTTP/2: Fix busy loop when EOF is encountered
 o CURLOPT_CAPATH: return failure if set without backend support
 o nss: do not fail if a CRL is already cached
 o smtp: Fixed intermittent "SSL3_WRITE_PENDING: bad write retry" error
 o fixed 20+ nits/memory leaks identified by Coverity scans
 o curl_schannel.c: Fixed possible memory or handle leak
 o multi-uv.c: call curl_multi_info_read() better
 o Cmake: Check for OpenSSL before OpenLDAP
 o Cmake: Fix library list provided to cURL tests
 o Cmake: Avoid cycle directory dependencies
 o Cmake: Build with GSSAPI (MIT or Heimdal)
 o vtls: provide backend defines for internal source code

This release includes the following known bugs:

 o see docs/KNOWN_BUGS (http://curl.haxx.se/docs/knownbugs.html)

This release would not have looked like this without help, code, reports and
advice from friends like these:

  Askar Safin, Bill Nagel, Catalin Patulea, Dan Fandrich, Daniel Stenberg,
  Dimitar Boevski, Fabian Keil, Jakub Zakrzewski, Jeremy Lin,
  Jonathan Cardoso Machado, Kamil Dudka, Luan Cestari, Marcel Raad,
  Marc Hoersken, Michael Wallner, Patrick Monnerat, Paul Howarth, Ray Satiro,
  Steve Holme, Tatsuhiro Tsujikawa, Ulrich Telle, Viktor Szakáts, Waldek Kozba,
  Yousuke Kimoto,

        Thanks! (and sorry if I forgot to mention someone)

References to bug reports and discussions on issues:

 [1] = http://curl.haxx.se/mail/lib-2014-09/0064.html
 [2] = http://curl.haxx.se/mail/lib-2014-09/0075.html
 [3] = http://curl.haxx.se/mail/lib-2014-08/0273.html
 [4] = http://curl.haxx.se/bug/view.cgi?id=1422
 [5] = http://curl.haxx.se/libcurl/c/CURLOPT_COOKIELIST.html
 [6] = http://curl.haxx.se/bug/view.cgi?id=1426